tests/baselines/reference/parserGenericConstraint3.errors.txt
==== tests/cases/compiler/parserGenericConstraint3.ts (1 errors) ====
    class C<T extends List<T>> {
                      ~~~~
!!! parserGenericConstraint3.ts(1,19): error TS2095: Cannot find name 'List'.
    }